--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ SECRET_KEY='342s(s(!hsjd998sde8$=o4$3m!(o+kce2^97kp6#ujhi'
 DEBUG=False #set to false in production
 DB_NAME='instagram'
 DB_USER='moringa'
-DB_PASSWORD='Access'
+DB_PASSWORD='pepe201'
 DB_HOST='127.0.0.1'
-MODE='prod' #set to 'prod' in production
+MODE='dev' 
 ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
