--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ django-crispy-forms==1.9.2
 django-heroku==0.3.1
 gunicorn==20.0.4
 Pillow==8.0.0
+pkg-resources==0.0.0
 psycopg2==2.8.6
 pycodestyle==2.6.0
+python-decouple==3.3
 pytz==2020.1
 sqlparse==0.4.1
 toml==0.10.1
